fix: fix the bug on member card when the text is too long

--- a/src/assets/scss/member.scss
+++ b/src/assets/scss/member.scss
@@ -16,11 +16,11 @@
 .member-wrap {
   margin-top: 30px;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(3, calc(33.33% - 37.33px));
   gap: 56px;
 
   @media (max-width: 1000px) {
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(2, calc(50% - 18px));
     column-gap: 36px;
   }
 
